# samotop

./: .dockerignore  .gitignore  .gitlab-ci.builder.yml  .gitlab-ci.config.yml  .gitlab-ci.publish.yml  .gitlab-ci.yml  .gitlab.ci.yml  .gitmodules  Cargo.toml  Dockerfile  LICENSE  NOTICE  README-TLS.md  README.md  clean.sh  fix.sh
samotop/: Cargo.toml  README.md
samotop-core/: Cargo.toml  README.md
samotop-core/src/: builder.rs  lib.rs  parser.rs  store.rs
samotop-core/src/config/: builder.rs  mod.rs  store.rs
samotop-core/src/io/: connection.rs  dummy.rs  handler.rs  mod.rs  service.rs  session.rs  smtp.rs  tls.rs
samotop-core/src/io/server/: io.rs  mod.rs  tcp.rs  unix.rs
samotop-core/src/io/tls/: mod.rs  notls.rs  stream.rs  traits.rs
samotop-core/src/mail/: builder.rs  configuration.rs  debug.rs  dispatch.rs  driver.rs  esmtp.rs  guard.rs  logger.rs  mail.rs  mail_service.rs  mailservice.rs  mod.rs  name.rs  null.rs  parser.rs  recipient.rs  service.rs  session.rs  setup.rs  tls.rs  transaction.rs
samotop-core/src/mail/rfc2033/: body.rs  helo.rs  mod.rs
samotop-core/src/mail/rfc3207/: mod.rs  starttls.rs
samotop-core/src/mail/rfc5321/: body.rs  data.rs  helo.rs  invalid.rs  mail.rs  mod.rs  noop.rs  quit.rs  rcpt.rs  rset.rs  session.rs  unknown.rs
samotop-core/src/mail/rfc821/: mod.rs
samotop-core/src/model/: mod.rs  session.rs
samotop-core/src/protocol/: fuse.rs  mod.rs  old-smtp.rs  parse.rs  sink.rs  smtp.rs  tls.rs
samotop-core/src/server/: io.rs  mod.rs  tcp.rs  unix.rs
samotop-core/src/service/: mod.rs  parser.rs
samotop-core/src/service/mail/: composite.rs  default.rs  mod.rs
samotop-core/src/service/session/: dummy.rs  mod.rs
samotop-core/src/service/tcp/: dummy.rs  mod.rs  smtp.rs  tls.rs
samotop-core/src/session/: dummy.rs  mod.rs
samotop-core/src/session/stateful/: handler.rs  mod.rs  service.rs  session.rs
samotop-core/src/smtp/: codec.rs  codec2.rs  command.rs  context.rs  driver.rs  dummy.rs  esmtp.rs  extension.rs  extensions.rs  host.rs  impatience.rs  impatient.rs  interpretter.rs  mod.rs  name.rs  parser.rs  path.rs  prudence.rs  reply.rs  service.rs  session.rs  session_service.rs  session_setup.rs  state.rs  stream.rs  transaction.rs
samotop-core/src/smtp/command/: body.rs  helo.rs  mail.rs  mod.rs  noop.rs  rset.rs  session.rs  unknown.rs
samotop-core/src/smtp/commands/: body.rs  conn.rs  data.rs  invalid.rs  mail.rs  mod.rs  quit.rs  rcpt.rs
samotop-core/src/smtp/prudence/: mod.rs  (+2 more)
samotop-delivery/: Cargo.toml  README.md  README.tpl
samotop-delivery/benches/: transport_smtp.rs
samotop-delivery/examples/: smtp.rs  smtp_gmail.rs
samotop-delivery/src/: dispatch.rs  lib.rs  types.rs
samotop-delivery/src/delivery/: dir.rs  dispatch.rs  lmtp.rs  mod.rs
samotop-delivery/src/dir/: delivery.rs  error.rs  mod.rs  stream.rs
samotop-delivery/src/file/: mod.rs
samotop-delivery/src/journal/: delivery.rs  error.rs  mod.rs  stream.rs  transport.rs
samotop-delivery/src/sendmail/: error.rs  mod.rs
samotop-delivery/src/smtp/: authentication.rs  commands.rs  delivery.rs  error.rs  extension.rs  mod.rs  net.rs  response.rs  smtp_client.rs  stream.rs  tls.rs  transport.rs
samotop-delivery/src/stub/: error.rs  mod.rs
samotop-delivery/tests/: transport_file.rs  transport_sendmail.rs  transport_smtp.rs  transport_stub.rs
samotop-enc/: Cargo.toml
samotop-enc/src/: main.rs
samotop-model/: Cargo.toml  README.md
samotop-model/src/: io.rs  lib.rs  mail.rs  parser.rs
samotop-model/src/io/: mod.rs  traits.rs  types.rs
samotop-model/src/mail/: builder.rs  debug.rs  default.rs  esmtp.rs  mod.rs  name.rs  null.rs  session.rs  setup.rs  traits.rs  types.rs
samotop-model/src/smtp/: command.rs  commands.rs  extension.rs  extensions.rs  mod.rs  reply.rs  session.rs  state.rs
samotop-parser/: Cargo.toml  README.md  README.tpl
samotop-parser-nom/: Cargo.toml  README.md  README.tpl
samotop-parser-nom/examples/: parse.rs
samotop-parser-nom/src/: lib.rs  parser copy.rs  parser.rs
samotop-parser/examples/: parse.rs
samotop-parser/src/: command.rs  data.rs  lib.rs  lmtp.rs  parser.rs  smtp.rs
samotop-server/: .gitignore  Cargo.toml  README.md  README.tpl  Samotop.pem  with.txt  without.txt
samotop-server/docker/: Dockerfile
samotop-server/examples/: mta-smime-maildir.rs
samotop-server/src/: main.rs
samotop-smime/: Cargo.toml  README.md
samotop-smime/src/: accounts.rs  lib.rs  main.rs  smime.rs  smimemail.rs
samotop-smime/test/: enc  msg
samotop-smime/tests/: roundtrip.rs
samotop-smime/tests/data/: her.crt  her.key  my.crt  my.key
samotop-tests/: Cargo.toml  README.md
samotop-tests/src/: lib.rs
samotop-to-lmtp/: Cargo.toml  README.md
samotop-to-lmtp/src/: dirmail.rs  lib.rs  lmtp.rs  net.rs
samotop-with-native-tls/: Cargo.toml  README.md
samotop-with-native-tls/src/: lib.rs
samotop-with-rustls/: Cargo.toml  README.md
samotop-with-rustls/src/: lib.rs
samotop-with-spf/: Cargo.toml  README.md
samotop-with-spf/src/: lib.rs  lookup.rs
samotop/examples/: default.rs  dummy-smtp.rs  dummy-tcp.rs  dummy.rs  imap.rs  mailbody.txt  mailsession.txt  mailsessionlmtp.txt  on-cmd-journal.rs  on-cmd.rs  on-unix.rs  parser.rs  prudence-bad.txt  prudence-good.txt  prudent.rs  reaf.rs  to-dirmail.rs  to-lmtp-child.rs  to-lmtp-child.sh  to-lmtp-tcp.rs  to-lmtp-unix.rs  to-lmtp.rs
samotop/src/: lib.rs
samotop/src/cli/: cmd.rs  err.rs  log.rs  main.rs  mod.rs
samotop/src/grammar/: parser.rs  smtp.rs
samotop/src/io/: dummy.rs  mod.rs  smtp.rs  smtp2.rs
samotop/src/mail/: dirmail.rs  mapper.rs  mod.rs
samotop/src/model/: io.rs  mail.rs  session.rs
samotop/src/parser/: impatient.rs  mod.rs
samotop/src/protocol/: fuse.rs  mod.rs  parse.rs  smtp.rs  through.rs  tls.rs  tls_impl_rust.rs
samotop/src/server/: mod.rs  tcp.rs  unix.rs
samotop/src/service/: mod.rs  parser.rs
samotop/src/smtp/: impatient.rs  mod.rs
samotop/tests/: .integration.rs.pending-snap  exploratory.rs  insta.rs  integration.rs  mailsession.txt  server.rs
samotop/tests/explore/: mod.rs  services.rs
(+222 files in other folders)
