[package]
name = "samotop"
version = "0.9.0"
authors = ["jocutajar <tellnoone@robajz.info>"]
exclude = ["downloads/*"]
description = "SMTP server and library built on async-std"
documentation = "https://docs.rs/samotop/"
homepage = "https://gitlab.com/BrightOpen/BackYard/Samotop/"
repository = "https://gitlab.com/BrightOpen/BackYard/Samotop/"
readme = "README.md"
keywords = ["smtp", "async", "server", "parser", "PEG"]
edition = "2018"

# see crates.io/category_slugs
categories = [
    "email",
    "asynchronous",
    "network-programming",
    "parser-implementations",
]
license = "MIT"

[badges]
gitlab = { repository = "BrightOpen/BackYard/Samotop", branch = "develop" }

[dependencies]
log = "0.4"
env_logger = "0.7"
structopt = "0.3"
peg = "0.6"
bytes = "0.5"
hostname = "0.3"
uuid = { version = "0.8", features = ["v4"] }
futures = "0.3"
async-std = "1.6.2"
async-tls = "0.9"
rustls = "0.18"
pin-project = "0.4"
memchr = "2.3"
chrono = "0.4"

[dev-dependencies]
futures-await-test = "0.3"
