[workspace]
members = [
    "samotop-core",
    "samotop-model",
    "samotop-delivery",
    "samotop-parser",
    "samotop-parser-nom",
    "samotop-with-rustls",
    "samotop-with-native-tls",
    "samotop-with-spf",
    "samotop-smime",
    "samotop-tests",
    "samotop",
    "samotop-server",
]
