[package]
name = "samotop-core"
version = "0.12.0"
authors = ["jocutajar <tellnoone@robajz.info>"]
license = "MIT OR Apache-2.0"
description = "The domain model of Samotop and core functionality - SMTP server and library built on async-std. A base crate for samotop extensions."
documentation = "https://docs.rs/samotop/"
homepage = "https://gitlab.com/BrightOpen/Samotop/-/tree/develop/samotop-core"
repository = "https://gitlab.com/BrightOpen/Samotop/"
keywords = ["smtp", "model", "async", "server"]
edition = "2018"

categories = [
    "email",
    "asynchronous",
    "network-programming",
]

[badges]
gitlab = { repository = "BrightOpen/Samotop", branch = "develop" }
maintenance = { status = "actively-developed" }

[dependencies]
futures-core = "0.3"
futures-io = "0.3"
bytes = "1.0"
log = "0.4"

[dev-dependencies]
futures-await-test = "0.3"