[package]
name = "samotop-core"
version = "0.13.0-samotop-dev"
authors = ["jocutajar <tellnoone@robajz.info>"]
license = "MIT OR Apache-2.0"
description = "The domain model of Samotop and core functionality - SMTP server and library built on async-std. A base crate for samotop extensions."
documentation = "https://docs.rs/samotop/"
homepage = "https://gitlab.com/BrightOpen/Samotop/-/tree/develop/samotop-core"
repository = "https://gitlab.com/BrightOpen/Samotop/"
keywords = ["smtp", "model", "async", "server"]
edition = "2018"

categories = ["email", "asynchronous", "network-programming"]

[badges]
gitlab = { repository = "BrightOpen/Samotop", branch = "develop" }
maintenance = { status = "actively-developed" }

[features]
server = ["futures-util/alloc", "async-std/default"]
driver = ["async-std/std"]
prudence = ["smol-timeout"]

[dependencies]
futures-io = "0.3"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false, optional = true }
async-std = { version = "1.9", default-features = false, optional = true }
smol-timeout = { version = "0.6", optional = true }
log = "0.4"

[dev-dependencies]
insta = { version = "1.7" }
regex = "1.5"