[package]
name = "samotop-core"
version = "0.14.0"
authors = ["jocutajar <tellnoone@robajz.info>"]
license = "MIT OR Apache-2.0"
description = "The domain model of Samotop and core functionality - SMTP server and library built on async-std. A base crate for samotop extensions."
documentation = "https://docs.rs/samotop/"
homepage = "https://gitlab.com/BrightOpen/Samotop/-/tree/develop/samotop-core"
repository = "https://gitlab.com/BrightOpen/Samotop/"
keywords = ["smtp", "model", "async", "server"]
edition = "2018"

categories = ["email", "asynchronous", "network-programming"]

[badges]
gitlab = { repository = "BrightOpen/Samotop", branch = "develop" }
maintenance = { status = "actively-developed" }

[features]
server = ["futures-util/alloc", "async-std"]
driver = ["async-std/std"]
prudence = ["smol-timeout","async-std"]
serialize = ["serde"]

[dependencies]
futures-io = "0.3"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false, optional = true }
async-std = { version = "1.9", default-features = false, optional = true }
serde = { version = "1", default-features = false, optional = true }
smol-timeout = { version = "0.6", optional = true }
tracing = { version = "0.1", default-features = false }

[dev-dependencies]
insta = { version = "1.7" }
regex = "1.5"
async-std = { version = "1.9", features = ["attributes"] }
