[package]

name = "samotop-delivery"
version = "0.5.0"
description = "Set of transports to deliver mail to, notably to SMTP/LMTP, but also maildir..."
readme = "README.md"
homepage = "https://gitlab.com/BrightOpen/BackYard/Samotop/-/tree/develop/samotop-delivery"
repository = "https://gitlab.com/BrightOpen/BackYard/Samotop/"
license = "MIT OR Apache-2.0"
authors = [
    "jocutajar <tellnoone@robajz.info>",
    "dignifiedquire <me@dignifiedquire.com>",
]
categories = ["email"]
keywords = ["email", "smtp", "mailer"]
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
log = "^0.4"
nom = { version = "^5.0", optional = true }
base64 = { version = "^0.12", optional = true }
hostname = { version = "0.1.5", optional = true }
serde = { version = "^1.0", optional = true }
serde_json = { version = "^1.0", optional = true }
serde_derive = { version = "^1.0", optional = true }
fast_chemail = "^0.9"
async-tls = { version = "0.10", optional = true }
async-native-tls = { version = "0.3.3", optional = true }
async-std = { version = "1.6.0", features = ["unstable"] }
pin-project = "1.0"
pin-utils = "0.1.0"
thiserror = "1.0.9"
futures = { version = "0.3.5", default-features = false, features = ["std"] }
samotop-model = { version = "0.11.0", path = "../samotop-model" }
potential = "2.2"
bytes = "0.6"
memchr = "2.3"

[dev-dependencies]
env_logger = "^0.8"
glob = "^0.3"
criterion = "^0.3"
async-attributes = "1.1.1"
structopt = "0.3.17"

[[bench]]
name = "transport_smtp"
harness = false

[features]
default = ["file-transport", "smtp-transport", "sendmail-transport", "rust-tls"]
unstable = []
serde-impls = ["serde", "serde_derive"]
file-transport = ["serde-impls", "serde_json"]
smtp-transport = ["base64", "nom", "hostname"]
sendmail-transport = []
rust-tls = ["async-tls"]
native-tls = ["async-native-tls"]
native-tls-vendored = ["async-native-tls/vendored", "native-tls"]

[[example]]
name = "smtp"
required-features = ["smtp-transport"]

[[example]]
name = "smtp_gmail"
required-features = ["smtp-transport"]
