[package]

name = "samotop-delivery"
version = "0.12.0"
description = "Set of transports to deliver mail to, notably to SMTP/LMTP, but also maildir..."
readme = "README.md"
homepage = "https://gitlab.com/BrightOpen/Samotop/-/tree/develop/samotop-delivery"
repository = "https://gitlab.com/BrightOpen/Samotop/"
license = "MIT OR Apache-2.0"
authors = [
    "jocutajar <tellnoone@robajz.info>",
    "dignifiedquire <me@dignifiedquire.com>",
]
categories = ["email"]
keywords = ["email", "smtp", "mailer"]
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
log = "^0.4"
nom = { version = "^6.0.1", optional = true }
base64 = { version = "^0.13", optional = true }
hostname = { version = "0.3", optional = true }
serde = { version = "^1.0", optional = true }
serde_json = { version = "^1.0", optional = true }
serde_derive = { version = "^1.0", optional = true }
fast_chemail = "^0.9"
async-std = { version = "1.9", features = ["unstable"] }
pin-project = "1.0"
pin-utils = "0.1"
thiserror = "1.0"
futures = { version = "0.3", default-features = false, features = ["std"] }
potential = "2.2"
bytes = "1.0"
memchr = "2.3"

[dependencies.samotop-core]
version = "0.12.0"
path = "../samotop-core"

[dev-dependencies]
env_logger = "^0.8"
glob = "^0.3"
criterion = "^0.3"
async-attributes = "1.1"
structopt = "0.3"

[[bench]]
name = "transport_smtp"
harness = false

[features]
default = ["file-transport", "smtp-transport", "sendmail-transport", "skip-benches"]
unstable = []
serde-impls = ["serde", "serde_derive"]
file-transport = ["serde-impls", "serde_json"]
smtp-transport = ["base64", "nom", "hostname"]
sendmail-transport = []
skip-benches = []

[[example]]
name = "smtp"
required-features = ["smtp-transport"]

[[example]]
name = "smtp_gmail"
required-features = ["smtp-transport"]
