[package]
name = "samotop-model"
version = "0.11.0-samotop-dev"
authors = ["jocutajar <tellnoone@robajz.info>"]
license = "MIT OR Apache-2.0"
description = "The domain model of Samotop - SMTP server and library built on async-std"
documentation = "https://docs.rs/samotop/"
homepage = "https://gitlab.com/BrightOpen/BackYard/Samotop/"
repository = "https://gitlab.com/BrightOpen/BackYard/Samotop/"
keywords = ["smtp", "model"]
edition = "2018"

# see crates.io/category_slugs
categories = ["email"]

[badges]
gitlab = { repository = "BrightOpen/BackYard/Samotop", branch = "develop" }
maintenance = { status = "actively-developed" }

[dependencies]
futures-io = "0.3"
