[package]
name = "samotop-model"
version = "0.13.0-samotop-dev"
authors = ["jocutajar <tellnoone@robajz.info>"]
license = "MIT OR Apache-2.0"
description = "Deprecated. Use samotop-core"
documentation = "https://docs.rs/samotop/"
homepage = "https://gitlab.com/BrightOpen/Samotop/-/tree/develop/samotop-model"
repository = "https://gitlab.com/BrightOpen/Samotop/"
keywords = []
edition = "2018"

categories = []

[badges]
maintenance = { status = "deprecated" }

[dependencies.samotop-core]
version = "0.13.0-samotop-dev"
path = "../samotop-core"
