[package]
name = "samotop-parser-nom"
version = "0.12.0"
authors = ["jocutajar <tellnoone@robajz.info>"]
license = "MIT OR Apache-2.0"
description = "SMTP parser of Samotop - SMTP server and library built on async-std"
documentation = "https://docs.rs/samotop/"
homepage = "https://gitlab.com/BrightOpen/Samotop/-/tree/develop/samotop-parser"
repository = "https://gitlab.com/BrightOpen/Samotop/"
keywords = ["smtp", "parser", "PEG"]
edition = "2018"

# see crates.io/category_slugs
categories = ["email", "network-programming", "parser-implementations"]

[badges]
gitlab = { repository = "BrightOpen/Samotop", branch = "develop" }
maintenance = { status = "actively-developed" }

[dependencies.samotop-core]
version = "0.12.0"
path = "../samotop-core"

[dependencies]
rustyknife = "0.2"
nom = "6.0.1"
