[package]
name = "samotop-parser"
version = "0.11.0-samotop-dev"
authors = ["jocutajar <tellnoone@robajz.info>"]
license = "MIT OR Apache-2.0"
description = "SMTP parser of Samotop - SMTP server and library built on async-std"
documentation = "https://docs.rs/samotop/"
homepage = "https://gitlab.com/BrightOpen/BackYard/Samotop/"
repository = "https://gitlab.com/BrightOpen/BackYard/Samotop/"
keywords = ["smtp", "parser", "PEG"]
edition = "2018"

# see crates.io/category_slugs
categories = ["email", "network-programming", "parser-implementations"]

[badges]
gitlab = { repository = "BrightOpen/BackYard/Samotop", branch = "develop" }
maintenance = { status = "actively-developed" }

[dependencies.samotop-model]
version = "0.11.0-samotop-dev"
path = "../samotop-model"

[dependencies]
peg = "0.6"
