[package]
name = "samotop-server"
version = "1.0.2-samotop-dev"
authors = ["jocutajar <tellnoone@robajz.info>"]
license = "MIT OR Apache-2.0"
description = "SMTP server with focus on privacy"
documentation = "https://docs.rs/samotop-server/"
homepage = "https://gitlab.com/BrightOpen/BackYard/Samotop/-/tree/develop/samotop-server"
repository = "https://gitlab.com/BrightOpen/BackYard/Samotop/"
readme = "README.md"
keywords = ["smtp", "e-mail", "mail", "email", "server"]
edition = "2018"

# see crates.io/category_slugs
categories = ["email", "asynchronous"]

[badges]
gitlab = { repository = "BrightOpen/BackYard/Samotop", branch = "develop" }

[dependencies.samotop]
version = "0.12.0"
path = "../samotop"
features = ["spf"]
default-features = false

[dependencies]
log = "0.4"
env_logger = "0.8"
structopt = "0.3"
hostname = "0.3"
async-std = "1"
async-tls = "0.11"
rustls = "0.19"
regex = "1.4"

#[build]
#target = "x86_64-unknown-linux-musl"

# [target.x86_64-unknown-linux-musl]
# ar = "x86_64-linux-musl-ar"
