[package]
name = "samotop-smime"
version = "0.12.0"
authors = ["Robert Cutajar <robert.cutajar@robajz.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = "1.0"
async-std = "1.8"
async-macros = "2.0"
pin-project = "1.0"
log = "0.4"

[dependencies.samotop-core]
version = "0.12.0"
path = "../samotop-core"

[dev-dependencies]
futures-await-test = "0.3"
futures-lite = "1.11"