[package]
name = "samotop-smime"
version = "0.13.0-samotop-dev"
authors = ["Robert Cutajar <robert.cutajar@robajz.info>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A samotop extensions for server side S/MIME encrypted mail."
documentation = "https://docs.rs/samotop/"
homepage = "https://gitlab.com/BrightOpen/Samotop/-/tree/develop/samotop-core"
repository = "https://gitlab.com/BrightOpen/Samotop/"
keywords = ["smtp", "model", "async", "server"]

categories = ["email", "asynchronous", "network-programming", "cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = "1.0"
async-std = { version = "1.9", features = ["attributes"] }
async-macros = "2.0"
pin-project = "1.0"
log = "0.4"

[dependencies.samotop-core]
version = "0.13.0-samotop-dev"
path = "../samotop-core"

[dev-dependencies]
futures-lite = "1.11"
