[package]
name = "samotop-to-lmtp"
version = "0.11.0-samotop-dev"
authors = ["jocutajar <tellnoone@robajz.info>"]
license = "MIT OR Apache-2.0"
description = "Integration with another LMTP service for Samotop - SMTP server and library built on async-std"
documentation = "https://docs.rs/samotop/"
homepage = "https://gitlab.com/BrightOpen/BackYard/Samotop/"
repository = "https://gitlab.com/BrightOpen/BackYard/Samotop/"
keywords = ["smtp", "lmtp"]
edition = "2018"

# see crates.io/category_slugs
categories = ["email", "network-programming"]

[badges]
gitlab = { repository = "BrightOpen/BackYard/Samotop", branch = "develop" }
maintenance = { status = "actively-developed" }

[dependencies.samotop-core]
version = "0.11.0-samotop-dev"
path = "../samotop-core"

[dependencies]
pin-project = "0.4"
log = "0.4"
async-tls = "0.10"
async-trait = { git = "https://github.com/BrightOpen/async-trait.git", branch = "master" }

[dependencies.async-smtp]
git = "https://github.com/BrightOpen/async-smtp.git"
branch = "master"
features = ["native-tls-vendored"]
version = "0.4.3"
