[package]
name = "samotop-to-lmtp"
version = "0.11.0-samotop-dev"
authors = ["jocutajar <tellnoone@robajz.info>"]
license = "MIT OR Apache-2.0"
description = "Integration with another LMTP service for Samotop - SMTP server and library built on async-std"
documentation = "https://docs.rs/samotop/"
homepage = "https://gitlab.com/BrightOpen/BackYard/Samotop/"
repository = "https://gitlab.com/BrightOpen/BackYard/Samotop/"
keywords = ["smtp", "lmtp"]
edition = "2018"

# see crates.io/category_slugs
categories = ["email", "network-programming"]

[badges]
gitlab = { repository = "BrightOpen/BackYard/Samotop", branch = "develop" }
maintenance = { status = "actively-developed" }

[dependencies.samotop-core]
version = "0.11.0-samotop-dev"
path = "../samotop-core"

[dependencies]
pin-project = "1.0"
log = "0.4"

[dependencies.samotop-delivery]
path = "../samotop-delivery"
version = "0.5.0"
