[package]
name = "samotop-with-native-tls"
version = "0.13.0-samotop-dev"
authors = ["jocutajar <tellnoone@robajz.info>"]
license = "MIT OR Apache-2.0"
description = "Native TLS support for Samotop"
documentation = "https://docs.rs/samotop/"
homepage = "https://gitlab.com/BrightOpen/Samotop/-/tree/develop/samotop-with-rustls"
repository = "https://gitlab.com/BrightOpen/Samotop/"
keywords = ["smtp", "tls"]
edition = "2018"

# see crates.io/category_slugs
categories = ["email", "network-programming", "cryptography"]

[badges]
gitlab = { repository = "BrightOpen/Samotop", branch = "develop" }
maintenance = { status = "actively-developed" }

[dependencies.samotop-core]
version = "0.13.0-samotop-dev"
path = "../samotop-core"

[dependencies]
async-native-tls = { version = "0.3", features = ["vendored"] }
