[package]
name = "samotop-with-rustls"
version = "0.12.0"
authors = ["jocutajar <tellnoone@robajz.info>"]
license = "MIT OR Apache-2.0"
description = "Rustls support for Samotop"
documentation = "https://docs.rs/samotop/"
homepage = "https://gitlab.com/BrightOpen/BackYard/Samotop/-/tree/develop/samotop-with-rustls"
repository = "https://gitlab.com/BrightOpen/BackYard/Samotop/"
keywords = ["smtp", "tls"]
edition = "2018"

# see crates.io/category_slugs
categories = ["email", "network-programming", "cryptography"]

[badges]
gitlab = { repository = "BrightOpen/BackYard/Samotop", branch = "develop" }
maintenance = { status = "actively-developed" }

[dependencies.samotop-core]
version = "0.12.0"
path = "../samotop-core"

[dependencies]
async-tls =  "0.11"