[package]
name = "samotop-with-spf"
version = "0.12.0"
authors = ["jocutajar <tellnoone@robajz.info>"]
license = "MIT OR Apache-2.0"
description = "Integration of SPF checks into Samotop - SMTP server and library built on async-std"
documentation = "https://docs.rs/samotop/"
homepage = "https://gitlab.com/BrightOpen/BackYard/Samotop/-/tree/develop/samotop-with-spf"
repository = "https://gitlab.com/BrightOpen/BackYard/Samotop/"
keywords = ["smtp", "spf"]
edition = "2018"

# see crates.io/category_slugs
categories = ["email", "network-programming"]

[badges]
gitlab = { repository = "BrightOpen/BackYard/Samotop", branch = "develop" }
maintenance = { status = "actively-developed" }

[dependencies.samotop-core]
version = "0.12.0"
path = "../samotop-core"

[dependencies]
pin-project = "1.0"
log = "0.4"
viaspf = "0.2"
trust-dns-resolver = { version = "0.20", default-features = false }
async-std-resolver = "0.20"
async-std = "1.9"