[package]
name = "samotop-with-spf"
version = "0.13.1"
authors = ["jocutajar <tellnoone@robajz.info>"]
license = "MIT OR Apache-2.0"
description = "Integration of SPF checks into Samotop - SMTP server and library built on async-std"
documentation = "https://docs.rs/samotop/"
homepage = "https://gitlab.com/BrightOpen/Samotop/-/tree/develop/samotop-with-spf"
repository = "https://gitlab.com/BrightOpen/Samotop/"
keywords = ["smtp", "spf"]
edition = "2018"

# see crates.io/category_slugs
categories = ["email", "network-programming"]

[badges]
gitlab = { repository = "BrightOpen/Samotop", branch = "develop" }
maintenance = { status = "actively-developed" }

[dependencies.samotop-core]
version = "0.13.0"
#path = "../samotop-core"

[dependencies]
pin-project = "1.0"
log = "0.4"
# TODO: use released async version https://gitlab.com/glts/viaspf/-/issues/2
viaspf = { version = "0.4.0-alpha.3"}
trust-dns-resolver = { version = "0.20", default-features = false }
async-std-resolver = "0.20"
async-std = "1.9"
