[package]
name = "samotop"
version = "0.11.1-samotop-dev"
authors = ["jocutajar <tellnoone@robajz.info>"]
license = "MIT OR Apache-2.0"
description = "SMTP server and library built on async-std"
documentation = "https://docs.rs/samotop/"
homepage = "https://gitlab.com/BrightOpen/BackYard/Samotop/"
repository = "https://gitlab.com/BrightOpen/BackYard/Samotop/"
readme = "README.md"
keywords = ["smtp", "async", "server", "parser", "PEG"]
edition = "2018"

# see crates.io/category_slugs
categories = [
    "email",
    "asynchronous",
    "network-programming",
    "parser-implementations",
]

[badges]
gitlab = { repository = "BrightOpen/BackYard/Samotop", branch = "develop" }
maintenance = { status = "actively-developed" }

[features]
default = ["rust-tls", "spf", "lmtp-dispatch"]
spf = ["samotop-with-spf"]
lmtp-dispatch = ["samotop-to-lmtp"]
rust-tls = ["async-tls"]
native-tls = ["async-native-tls"]

[dependencies.samotop-core]
version = "0.11.0-samotop-dev"
path = "../samotop-core"

[dependencies.samotop-parser]
version = "0.11.0-samotop-dev"
path = "../samotop-parser"

[dependencies.samotop-with-spf]
version = "0.11.0-samotop-dev"
path = "../samotop-with-spf"
optional = true

[dependencies.samotop-to-lmtp]
version = "0.11.0-samotop-dev"
path = "../samotop-to-lmtp"
optional = true

[dependencies]
log = "0.4"
bytes = "0.6"
pin-project = "1.0"
futures = "0.3"
async-std = "1.7"
async-tls = { version = "0.10", optional = true }
async-native-tls = { version = "0.3", optional = true }
regex = "1.4"

[dev-dependencies]
futures-await-test = "0.3"
env_logger = "0.8"
