[package]
name = "samotop"
version = "0.13.2"
authors = ["jocutajar <tellnoone@robajz.info>"]
license = "MIT OR Apache-2.0"
description = "SMTP server and library built on async-std"
documentation = "https://docs.rs/samotop/"
homepage = "https://gitlab.com/BrightOpen/Samotop/"
repository = "https://gitlab.com/BrightOpen/Samotop/"
readme = "README.md"
keywords = ["smtp", "async", "server", "parser", "PEG"]
edition = "2018"

# see crates.io/category_slugs
categories = [
    "email",
    "asynchronous",
    "network-programming",
    "parser-implementations",
]

[badges]
gitlab = { repository = "BrightOpen/Samotop", branch = "develop" }
maintenance = { status = "actively-developed" }

[features]
default = ["rust-tls", "spf", "parser-peg", "smime", "delivery", "mapper"]
delivery = ["samotop-delivery"]
smime = ["samotop-smime"]
spf = ["samotop-with-spf"]
rust-tls = ["samotop-with-rustls"]
native-tls = ["samotop-with-native-tls", "samotop-with-native-tls"]
parser-peg = ["samotop-parser"]
parser-nom = ["samotop-parser-nom"]
mapper = ["regex"]

[dependencies]
log = "0.4"
regex = { version = "1.5", optional = true, default-features = false }

[dependencies.samotop-core]
version = "0.13.1"
path = "../samotop-core"
features = ["server", "driver", "prudence"]

[dependencies.samotop-parser]
version = "0.13.0"
path = "../samotop-parser"
optional = true

[dependencies.samotop-parser-nom]
version = "0.13"
path = "../samotop-parser-nom"
optional = true

[dependencies.samotop-with-spf]
version = "0.13.1"
path = "../samotop-with-spf"
optional = true

[dependencies.samotop-with-rustls]
version = "0.13"
path = "../samotop-with-rustls"
optional = true

[dependencies.samotop-with-native-tls]
version = "0.13"
path = "../samotop-with-native-tls"
optional = true

[dependencies.samotop-smime]
version = "0.13"
path = "../samotop-smime"
optional = true

[dependencies.samotop-delivery]
version = "0.13"
path = "../samotop-delivery"
optional = true

[dev-dependencies]
env_logger = "0.9"
insta = { version = "1.7" }
async-std = { version = "1.9", features = ["attributes"] }
